home design: text et background

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,5 +2,12 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
-@import "home";
-
+@import "banner";
+@import "general";
+@import "button";
+@import "text";
+@import "block";
+@import "morphing";
+@import "image";
+@import "backgroundline";
+@import "socials";
