--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,5 +6,8 @@ $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
+$black: #252525;
 $light-gray: #F4F4F4;
+$beige: #f5ebe7;
+$ivoire: #F6F5F5;
+$corail: #f98f8f;
