--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,6 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $black: #252525;
 $light-gray: #F4F4F4;
-$beige: #f5ebe7;
+$beige: #f5edea;
+$dark-beige: #f5e6e1;
 $ivoire: #F6F5F5;
 $corail: #f98f8f;
