--- a/app/assets/stylesheets/components/_backgroundline.scss
+++ b/app/assets/stylesheets/components/_backgroundline.scss
@@ -11,7 +11,7 @@
 }
 
 .circle {
-  border: 1px solid $beige;
+  border: 1px solid $dark-beige;
   border-radius: 50%;
   background-color: $ivoire;
 }
@@ -28,7 +28,7 @@
   position: absolute;
   height: 100%;
   width: 1px;
-  background-color: $beige;
+  background-color: $dark-beige;
   top: 0;
 }
 
