--- a/app/assets/stylesheets/components/_image.scss
+++ b/app/assets/stylesheets/components/_image.scss
@@ -2,7 +2,7 @@
   width: 390px;
   height: 390px;
   border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 12px 40px 5px rgba(0, 0, 0, 0.34);
   object-fit: cover;
 }
 
