--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
 <div class="home-content row align-items-center d-flex justify-content-center">
-
   <div class="home-background">
     <div class="circle-container circle"></div>
     <div class="line-container">
@@ -8,22 +7,21 @@
       <div class="lines line3"></div>
     </div>
   </div>
-
   <div class="home-bio col-12 col-md-5 col-sm-10 order-1 order-md-0">
     <div class="main-headline">Hi, I am Ambre,</div>
     <div class="main-bio">a freelance web developer and product designer working in Paris.
     <br>I specialize in UI/UX Design, Responsive Web Design, and Visual Development.</div>
   </div>
-
   <div class="image-block col-12 col-md-3 order-0 order-md-1">
     <%= image_tag ('ambrewagon.jpg'), class: 'profile-picture moving_shape border-move bg-move'  %>
   </div>
-
 <div class="social-container">
-  <div class="social-link">
-  </div>
+  <ul class="list-social-icons">
+    <li><%= link_to "", 'https://github.com/ambremgt', target: '_blank', class: "fab fa-github fa-lg social-icon"%></li>
+    <li><%= link_to "", 'https://www.linkedin.com/in/ambre-margerit-33441ba8/', target: '_blank', class: "fab fa-linkedin-in fa-lg social-icon"%></li>
+    <li><%= link_to "", 'https://dribbble.com/Ambremgt', target: '_blank', class: "fab fa-dribbble fa-lg social-icon"%></li>
+  </ul>
 </div>
-
 </div>
 
 
