--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
   <div class="home-bio col-12 col-md-5 col-sm-10 order-1 order-md-0">
     <div class="main-headline">Hi, I am Ambre,</div>
     <div class="main-bio">a freelance web developer and product designer working in Paris.
-    <br>I specialize in UI/UX Design, Responsive Web Design, and Visual Development.</div>
+    <br>I specialize in UI/UX Design, and Visual Development.</div>
   </div>
   <div class="image-block col-12 col-md-3 order-0 order-md-1">
     <%= image_tag ('ambrewagon.jpg'), class: 'profile-picture moving_shape border-move bg-move'  %>
