--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,7 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $black: #252525;
 $light-gray: #F4F4F4;
-$beige: #f5edea;
-$dark-beige: #f5e6e1;
+$beige: #fbe9e2;
+$dark-beige: #efe9e6;
 $ivoire: #F6F5F5;
-$corail: #f98f8f;
+$rouille: #E17A63;
