--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,8 +1,33 @@
-.btn-menu {
+a {
   text-decoration: none;
-  color: #252525;
-  border: solid 1px #252525;
-  padding: 15px;
-  position: absolute;
-  margin-top: 10px;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+// .btn-menu {
+//   text-decoration: none;
+//   color: #252525;
+//   border: solid 1px #252525;
+//   padding: 15px;
+//   position: absolute;
+//   margin-top: 10px;
+// }
+
+.btn-main {
+  transition: 0.8s;
+  color: $black;
+  font-weight: 400;
+  letter-spacing: 1px;
+  font-size: 16px;
+  padding: 10px;
+    &:hover {
+      color: $rouille;
+      letter-spacing: 5px;
+      transition: 0.9s;
+      font-size: 13px;
+    }
+}
+.btn-rotate {
+  transform: rotate(-90deg);
 }
