--- a/app/assets/stylesheets/components/_text.scss
+++ b/app/assets/stylesheets/components/_text.scss
@@ -12,3 +12,10 @@
   font-size: 20px;
   font-weight: 200;
 }
+
+h3 {
+  color: $black;
+  font-weight: 400;
+  letter-spacing: 1px;
+  font-size: 14px;
+}
