--- a/app/assets/stylesheets/components/_scroll.scss
+++ b/app/assets/stylesheets/components/_scroll.scss
@@ -13,10 +13,11 @@
 }
 
 .btn-scroll {
+  font-size:13px;
     position: absolute;
     bottom: 55px;
     transition: 1.5s;
-    left: -13px;
+    left: -10px;
 }
 
 .circle-scroll {
