--- a/app/assets/stylesheets/components/_block.scss
+++ b/app/assets/stylesheets/components/_block.scss
@@ -18,3 +18,19 @@
   height: 100vh;
   width: 100vw;
 }
+
+.wrap-2{
+    position:fixed;
+    z-index:32;
+    top:0;
+    left:0;
+    overflow:hidden;
+    height:100vh;
+    width:100vw;
+    margin:auto;
+    background: transparent;
+}
+canvas{
+    width:100%;
+    height:100%;
+}
