--- a/app/assets/stylesheets/components/_socials.scss
+++ b/app/assets/stylesheets/components/_socials.scss
@@ -4,7 +4,7 @@
   z-index: 40;
   height: 200px;
   width: 100px;
-  background: $beige;
+  // background: $beige;
   border-top-left-radius: 100px;
   border-bottom-left-radius: 100px;
 }
@@ -23,8 +23,7 @@
   color: $black;
   &:hover {
     transition: 0.3s;
-    color: $black;
+    color: $rouille;
     text-decoration: none;
-    opacity: 0.5;
     }
 }
