--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,7 +9,7 @@
 @import "block";
 @import "morphing";
 @import "image";
-@import "backgroundline";
+@import "background";
 @import "socials";
 @import "menu";
 @import "scroll";
