--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -1,3 +1,9 @@
+.home-background {
+  pointer-events: none;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+}
 
 // CIRCLE BACKGROUND
 .circle-container {
@@ -7,7 +13,7 @@
   transform: translate(-95%,-50%);
   position: absolute;
   left: 98%;
-  z-index: 31;
+  z-index: 1;
 }
 
 .circle {
@@ -42,4 +48,20 @@
 
 .line3 {
   left: 75vw;
+}
+
+.wrap-2{
+    position:fixed;
+    z-index:2;
+    top:0;
+    left:0;
+    overflow:hidden;
+    height:100vh;
+    width:100vw;
+    margin:auto;
+    background: transparent;
+}
+canvas{
+    width:100%;
+    height:100%;
 }
