cercle en commentaire

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-content row align-items-center d-flex justify-content-center">
   <div class="home-background">
-    <div class="circle-container circle"></div>
-    <div class="line-container">
+<!--     <div class="circle-container circle"></div>
+ -->    <div class="line-container">
       <div class="lines line1"></div>
       <div class="lines line2"></div>
       <div class="lines line3"></div>
