mep home projets

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,7 +6,7 @@
 @import "general";
 @import "button";
 @import "text";
-@import "block";
+@import "home";
 @import "morphing";
 @import "image";
 @import "background";
