--- a/app/views/projets/show.html.erb
+++ b/app/views/projets/show.html.erb
@@ -1,1 +1,10 @@
 BONJOUR
+    <%= @projet.name %>
+    <%= @projet.description %>
+    <%= @projet.category %>
+    <%= @projet.field %>
+    <%= @projet.context %>
+    <%= @projet.year %>
+    <%= @projet.url %>
+    <%= image_tag(@projet.cover, height: '600') %>
+    <br>
