--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -3,6 +3,7 @@
   position: absolute;
   height: 100vh;
   width: 100vw;
+  z-index: -1
 }
 
 // CIRCLE BACKGROUND
@@ -25,7 +26,7 @@
 
 // LINES BACKGROUND
 .line-container {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
 }
@@ -39,19 +40,23 @@
 }
 
 .line1 {
-  left: 20vw;
+  left: 16.6vw;
 }
 
 .line2 {
-  left: 40vw;
+  left: 33.2vw;
 }
 
 .line3 {
-  left: 60vw;
+  left: 50vw;
 }
 
 .line4 {
-  left: 80vw;
+  left: 66.2vw;
+}
+
+.line5 {
+  left: 82.4vw;
 }
 
 .wrap-2{
