--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,7 +49,7 @@
         <%= projet.name.downcase %>
         <div class="underline underline-name"></div>
       </div>
-      <div class="home-projet-cover">
+      <div class="home-projet-cover image-cover-home">
         <%= link_to image_tag(projet.cover, height: '600'), projet_path(projet) %>
       </div>
       <div class="home-projet-category">
