--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,15 +1,15 @@
+
 <div class="contact-btn-area">
   <%= link_to "CONTACT ME", "#", class: "btn-main" %>
 </div>
-
 <div class="side-menu-area">
   <div class="btn-rotate">
-    <%= link_to "ABOUT", "#", class: "btn-main" %>
+    <%= link_to "ABOUT", "/about", class: "btn-main" %>
   </div>
   <div class="btn-rotate">
-    <%= link_to "PROCESS", "#", class: "btn-main" %>
+    <%= link_to "PROCESS", "/process", class: "btn-main" %>
   </div>
   <div class="btn-rotate">
-    <%= link_to "WORK", "#", class: "btn-main" %>
+    <%= link_to "WORK", "/projets", class: "btn-main" %>
   </div>
 </div>
