--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -25,3 +25,11 @@
   margin-right: 50px;
   margin-top: 15px;
 }
+
+.btn-home {
+  position: absolute;
+  z-index: 3;
+  left: 0;
+  margin-left: 50px;
+  margin-top: 15px;
+}
