--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,117 @@
 // Specific CSS for your home-page
+.home-content {
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 100vh;
+  position: relative;
+  width: 100vw;
+}
+
+// HOME BIO
+.home-bio {
+  margin-bottom: 30px;
+  z-index: 3;
+}
+
+.main-headline, .main-bio {
+  font-family: $serif;
+  margin-left: 20px;
+}
+
+.main-headline {
+  font-size: 54px;
+  font-weight: 800;
+}
+
+.main-bio {
+  font-size: 20px;
+  font-weight: 200;
+}
+
+// HOME SLIDE PROJECT
+.slide-home {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  float: left;
+}
+
+.slide-home-wrapper {
+  margin: auto;
+  position: relative;
+  margin-top: 7%;
+}
+
+// HOME NAME PROJECT
+.home-projet-name-container {
+  z-index: 1;
+  position: absolute;
+  top: 0%;
+  left: 20%
+}
+
+@media(max-width: 950px) {
+  .home-projet-name-container  {
+  position: absolute;
+  top: 100%;
+  left: -2%;
+  width: 100vw;
+  text-align: center;
+  }
+  .underline-name {
+    margin-left: 45%;
+    margin-top: 20px;
+  }
+  .home-projet-category  {
+    display: none;
+  }
+  .home-projet-name {
+    line-height: 100px
+  }
+  .line2, .line4 {
+    display: none;
+  }
+}
+
+.home-projet-name{
+  font-size: 100px;
+  font-weight: 900;
+  font-family: Playfair Display;
+}
+
+//HOME UNDERLINE
+.underline{
+  width: 50px;
+  height: 2px;
+  background-color: $black;
+}
+
+.underline-name {
+  z-index: 1;
+  position: absolute;
+  left: 0px;
+}
+
+.underline-category {
+  margin-bottom: 10px;
+}
+
+// HOME CATEGORY PROJECT
+.home-projet-category {
+  position: absolute;
+  bottom: 20%;
+  right: 25%;
+  font-weight: 600;
+}
+
+// HOME COVER
+.home-projet-cover {
+  width: auto;
+  text-align: center;
+  margin-right: 20px;
+}
+
+ .image-cover-home {
+  height: 600px;
+}
+
