--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -2,6 +2,9 @@
 <div class="contact-btn-area">
   <%= link_to "CONTACT ME", "#", class: "btn-main" %>
 </div>
+<div class="btn-home">
+  <%= link_to "am.", "/", class: "btn-transparent" %>
+</div>
 <div class="side-menu-area">
   <div class="btn-rotate">
     <%= link_to "ABOUT", "/about", class: "btn-main" %>
