--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -2,6 +2,10 @@
   font-size: 300px;
   font-weight: 900;
   line-height: 1;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: $black;
+  font-family: sans-serif;
+  color: transparent;
 }
 
 .main-title {
@@ -9,6 +13,8 @@
   font-weight: 800;
   font-family: "Playfair Display";
   line-height: 1;
+  animation-duration: 4s;
+  transition: all 0.5s ease-in-out;
 }
 
 .second-title {
@@ -18,6 +24,8 @@
   text-align: right;
   margin-top: 100px;
   font-weight: 400;
+  animation-duration: 5s;
+
 }
 
 .bio-about {
@@ -26,6 +34,8 @@
   text-align: right;
   font-weight: 300;
   line-height: 1.7;
+  animation-duration: 5s;
+
 }
 
 .about-picture {
@@ -35,14 +45,15 @@
 
 .about-bio-container {
   position: absolute;
-  left: 10%;
-  top: 15%;
+  left: 15%;
+  top: 22%;
+  margin-bottom: 100px;
 }
 
 .about-container-image {
   position: fixed;
   right: 0;
-  top: 7%;
+  top: 20%;
   padding-right: 0;
 }
 
