--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,7 +7,9 @@ $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $black: #252525;
+$light-black: #676767;
 $light-gray: #F4F4F4;
+$light-red: #D07A7A;
 $beige: #fbe9e2;
 $dark-beige: #efe9e6;
 $ivoire: #F6F5F5;
