--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,23 +1,27 @@
 <style> body{background-color: #e6e2df;}</style>
-
-  <div class="social-container" style="top: 35%;">
-    <ul class="list-social-icons">
-      <li><%= link_to "", 'https://github.com/ambremgt', target: '_blank', class: "fab fa-github fa-lg social-icon"%></li>
-      <li><%= link_to "", 'https://www.linkedin.com/in/ambre-margerit-33441ba8/', target: '_blank', class: "fab fa-linkedin-in fa-lg social-icon"%></li>
-      <li><%= link_to "", 'https://dribbble.com/Ambremgt', target: '_blank', class: "fab fa-dribbble fa-lg social-icon"%></li>
-    </ul>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="about-bio-container col-12 col-md-5 col-sm-10 order-1 order-md-0">
-      <div class="main-letter">A.</div>
-      <div class="main-title">a bit about myself</div>
-      <div class="second-title">So,</div>
-      <div class="bio-about">I’m Ambre — Product Designer and Web Developer with a marketing background. I love everything that has to do with product & visual design, UI/UX Design, mobile & web projects as well as branding, and animations. With my experience at Le Wagon, I know how to develop a web site by using design thinking.</div>
-     <div class="second-title">What I do</div>
-      <div class="bio-about">With a background in Front-End Development, I understand the constraints of the web and am able to design and build around them effectively. My goal is to help people build better and more meaningful products.</div>
+    <div class="social-container" style="top: 35%;">
+      <ul class="list-social-icons">
+        <li><%= link_to "", 'https://github.com/ambremgt', target: '_blank', class: "fab fa-github fa-lg social-icon"%></li>
+        <li><%= link_to "", 'https://www.linkedin.com/in/ambre-margerit-33441ba8/', target: '_blank', class: "fab fa-linkedin-in fa-lg social-icon"%></li>
+        <li><%= link_to "", 'https://dribbble.com/Ambremgt', target: '_blank', class: "fab fa-dribbble fa-lg social-icon"%></li>
+      </ul>
     </div>
-    <div class="about-container-image col-12 col-md-5 order-0 order-md-1">
-      <%= image_tag ('ambrewagon.jpg'), height: 750, width: 622, crop: :fill, class: 'about-picture' %>
+
+
+
+
+    <div class="row d-flex justify-content-center">
+      <div class="about-bio-container col-12 col-md-5 col-sm-10 order-1 order-md-0">
+        <div class="main-letter">A.</div>
+        <div class="main-title">a bit about myself</div>
+        <div class="second-title">So,</div>
+        <div class="bio-about">I’m Ambre — Product Designer and Web Developer with a marketing background. I love everything that has to do with product & visual design, UI/UX Design, mobile & web projects as well as branding, and animations. With my experience at Le Wagon, I know how to develop a web site by using design thinking.</div>
+       <div class="second-title">What I do</div>
+        <div class="bio-about" style="text-transform: uppercase;">With a background in Front-End Development, I understand the constraints of the web and am able to design and build around them effectively. My goal is to help people build better and more meaningful products. I combine research, user flows, wireframing, storytelling, and visual design & development to transform tricky problems into engaging solutions. With a background in Front-End Development, I understand the constraints of the web and am able to design and build around them effectively. My goal is to help people build better and more meaningful products.</div>
+      </div>
+      <div class="about-container-image col-12 col-md-5 order-0 order-md-1">
+        <%= image_tag ('ambrewagon.jpg'), height: 750, width: 622, crop: :fill, class: 'about-picture' %>
+      </div>
     </div>
-  </div>
+
+
