--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,18 +1,22 @@
 
 <div class="contact-btn-area">
-  <%= link_to "CONTACT ME", "#", class: "btn-main" %>
+  <%= link_to "Say hello", "#", class: "btn-main" %>
 </div>
 <div class="btn-home">
-  <%= link_to "am.", "/", class: "btn-transparent" %>
+  <%= link_to "", "/", class: "btn-transparent" %>
 </div>
+<div class="paris">
+  PARIS
+</div>
+
 <div class="side-menu-area">
   <div class="btn-rotate">
-    <%= link_to "ABOUT", "/about", class: "btn-main" %>
+    <%= link_to "About", "/about", class: "btn-main scroll" %>
   </div>
   <div class="btn-rotate">
-    <%= link_to "PROCESS", "/process", class: "btn-main" %>
+    <%= link_to "Process", "/process", class: "btn-main scroll" %>
   </div>
   <div class="btn-rotate">
-    <%= link_to "WORK", "/projets", class: "btn-main" %>
+    <%= link_to "Work", "/work", class: "btn-main scroll" %>
   </div>
 </div>
