--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -1,8 +1,10 @@
 .side-menu-area {
+  background-color: transparent;
+  transition: 4s background-color ease;
   left: 0;
   z-index: 3;
   height: 100vh;
-  width: 8vw;
+  width: 8.53vw;
   position: fixed;
   display: flex;
   margin-top: auto;
@@ -16,5 +18,47 @@
   justify-content: space-around;
   -webkit-box-align: center;
   -ms-flex-align: center;
+}
+
+
+.paris {
+  position: fixed;
+  z-index: 3;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  right: 40px;
+  margin-top: 90vh;
+  -webkit-transition: 1s color ease;
+  transition: 1s color ease;
+  font-size: 12px;
+  letter-spacing: 3px;
+  font-weight: 300;
+}
+
+
+.navtop {
+  position: fixed;
+  width: 60%;
+  top: 0;
+  height: 10vh;
+  border-block-end: solid $light-black 1px;
+}
+
+
+.am20 {
+  transition: 1s color ease;
+  font-size: 12px;
+  letter-spacing: 3px;
+  font-weight: 300;
+  margin-top: 3.5vh;
+}
+
+.navtop-circle {
+  height: 13px;
+  width: 13px;
+  border-radius: 50%;
+  margin-top: 4.3vh;
+  border: 1px solid $black;
+  background-color: $black;
 }
 
