--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -1,6 +1,6 @@
 .side-menu-area {
   background-color: transparent;
-  transition: 4s background-color ease;
+  transition: 3s background-color ease;
   left: 0;
   z-index: 3;
   height: 100vh;
@@ -28,7 +28,6 @@
   transform: rotate(90deg);
   right: 40px;
   margin-top: 90vh;
-  -webkit-transition: 1s color ease;
   transition: 1s color ease;
   font-size: 12px;
   letter-spacing: 3px;
@@ -42,11 +41,11 @@
   top: 0;
   height: 10vh;
   border-block-end: solid $light-black 1px;
+  transition: all 1s;
 }
 
 
 .am20 {
-  transition: 1s color ease;
   font-size: 12px;
   letter-spacing: 3px;
   font-weight: 300;
@@ -58,7 +57,14 @@
   width: 13px;
   border-radius: 50%;
   margin-top: 4.3vh;
-  border: 1px solid $black;
   background-color: $black;
+  transition: 1s background-color ease;
+}
+
+.navtop-transparent {
+  color: transparent;
+  border-block-end-color: transparent;
+  background-color: transparent;
+  transition: all 1s;
 }
 
