--- a/app/assets/stylesheets/components/_scroll.scss
+++ b/app/assets/stylesheets/components/_scroll.scss
@@ -1,38 +1,53 @@
 .scroll-container {
   position: absolute;
   bottom: 0;
-  margin-bottom: 10px;
-  transition: 1.5s;
   z-index: 3;
 }
 
 .arrow-scroll {
-    position: absolute;
-    left: 47%;
-    bottom: 30px;
-    transition: 1s;
-}
-
-.btn-scroll {
-  font-size:13px;
-  position: absolute;
-  bottom: 55px;
-  transition: 1.5s;
-  left: -10px;
+  bottom: 0;
+  margin-left: 3vh;
 }
 
 .circle-scroll {
-  transition: 1.5s;
+  transition: 2s;
 }
 
-.scroll-container:hover {
-  .arrow-scroll {
-    transform: translate(0,15%);
-    }
-  .circle-scroll {
-    transform: translate(0%,-15%);
+
+//home bio
+
+.circle-scroll-more {
+  transition: 2s;
+  margin-right: 8vh;
+  margin-top: 5vh;
+}
+
+.arrow-scroll-incline {
+  position: absolute;
+  right: 13vh;
+  bottom: 3vh;
+  transition: 2s;
+}
+
+.scroll-container-more:hover {
+  .arrow-scroll-incline, .cta-arrow-projects {
+    transform: translate(5px, -30%);
   }
 }
 
+// projects home
+
+.cta-circle-projects {
+  transition: 2s;
+  margin-right: 8vh;
+  margin-top: 5vh;
+}
+
+.cta-arrow-projects {
+  position: absolute;
+  right: 11vh;
+  bottom: 3vh;
+  transition: 2s;
+}
 
 
